public class EBookLicense {
    private String licenseId;
    private boolean isAvailable;

    private EBook ebook;
}