import java.time.LocalDateTime;

public class MenuItem {
    private String itemId;
    private String name;
    private double price;
    private boolean isAvailable;
    private String category;
}